# deepsmirud

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: deploy.yml  pypi.yml
deepsmirud/: Main.py  predict.py
deepsmirud/util/: Biochar.py  Feature.py  Model.py
docs/: index.md  installation.md  jsun.bib  myst.yml  publication.md  spotlight.md  versions.md
docs/tutorial/: data.md  model.md  prediction.md
