[project]
name = "deepsmirud"
version = "0.1.2"
description = ""
authors = [
    {name = "Jianfeng Sun",email = "jianfeng.sunmt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy (==1.24.3)",
    "tensorflow (==2.14)",
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "biopython (>=1.85,<2.0)",
    "pyfiglet (>=1.0.2,<2.0.0)",
    "rdkit (>=2024.9.6,<2025.0.0)",
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry.scripts]
deepsmirud = "deepsmirud.predict:run"
deepsmirud_download = "deepsmirud.predict:download"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
